--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
   font-family: 'Open Sans', sans-serif;
 }
 body {
-  background-color: rgb(241, 241, 241);
+  background-color: rgba(44, 49, 49, 0.05);
 }
 
