--- a/src/Home.css
+++ b/src/Home.css
@@ -1,38 +1,41 @@
+.App hr {
+    width: 99.9%;
+}
+
 .container {
     width: 100%;
     align-items: center;
     justify-content: center;
+    
 }
 
 .containerChild {
-    float: left;
-    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .child1{
+    flex: 1;
+    box-sizing: border-box;
     background-color: #fff;
-    height: 500px;
+    height: 520px;
     border-radius: 7px;
     margin: 20px;
     padding: 10px;
-}
-
-.child1 hr {
-    margin-bottom: 10px;
 }
 
 .child2 {
+    flex: 1;
+    box-sizing: border-box;
     background-color: #fff;
-    height: 500px;
+    height: 520px;
     border-radius: 7px;
     margin: 20px;
     padding: 10px;
 }
 
-.sequence {
-    flex: 1;
-    float: right;
-    font-size: 16px;
-    font-weight: 600;
-    margin-right: 20px;
+@media (max-width: 1200px) {
+    .child1, .child2 {
+        flex: 100%;
+    }
 }
