--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -2,14 +2,19 @@
     flex: 1;
     float: left;
     width: 220px;
-    height: 150px;
-    margin: 15px;
+    height: 100%;
+    margin: 0 15px 15px 15px;
 }
 
-.newsContainer hr {
+hr {
     color: #999999;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    width: 100%;
+}
+
+.newsContainer {
+    max-height: 240px;
 }
 
 .newsContainer h3 {
@@ -19,7 +24,7 @@
 
 .newsContainer p {
     color: #999999;
-    margin: 5px;
+    margin-right: 5px;
     margin-right: 20px;
 }
 
@@ -28,6 +33,43 @@
 }
 
 .more {
+    margin-top: 6px;
     text-align: right;
     margin-right: 20px;
+    font-weight: 600;
 }
+
+.more:hover{
+    color: #073B59;
+    cursor: pointer;
+  }
+
+.next-page-container {
+    float: right;
+}
+
+.button-next-page {
+    width: 30px;
+    height: 35px;
+    padding: 5px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    background-color: #fff;
+    margin: 0 2px 10px 2px;
+    font-size: 16.8px;
+    transition: white 0.2s ease;
+}
+
+.icon-next-page {
+    width: 15px;
+    height: 15px;
+}
+
+.p-next-page {
+   font-size: 15px;
+}
+
+.button-next-page:hover{
+    color: #073B59;
+    cursor: pointer;
+  }
